# inline-python

./: .gitignore  ChangeLog.md  LICENSE  README.md  flake.nix  inline-python.cabal  package.nix  shell.nix
.github/workflows/: ci.yml
bench/: Main.hs
cbits/: python.c
exe/: tst.hs
include/: inline-python.h
py/: bound-vars.py
src/: Python.hs
src/Python/: Context.hs  Inline.hs  Literal.hs  QQ.hs  Types.hs
src/Python/Inline/: Eval.hs  Literal.hs  QQ.hs  Types.hs
src/Python/Internal/: CAPI.hs  Eval.hs  EvalQQ.hs  Init.hs  Program.hs  Types.hs  Util.hs
test/: main.hs
test/TST/: Callbacks.hs  FromPy.hs  Roundtrip.hs  Run.hs  ToPy.hs  Util.hs
test/exe/: main.hs
