Cabal-Version:  3.0
Build-Type:     Simple

Name:           inline-python
Version:        0.1
Synopsis:       Embedding python interpreter into haskell
Description:
  Embedding python interpreter

  License:        BSD-3-Clause
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Homepage:       https://github.com/Shimuuar/inline-python
Bug-reports:    https://github.com/Shimuuar/inline-python/issues
Category:       FFI
extra-doc-files:
  ChangeLog.md
data-files:
  py/bound-vars.py

source-repository head
  type:     git
  location: http://github.com/Shimuuar/inline-python

common language
  Ghc-options:          -Wall
  Default-Language:     GHC2021
  Default-Extensions:
    NoPolyKinds
    --
    DerivingVia
    PatternSynonyms
    ViewPatterns
    LambdaCase
    --
    NoFieldSelectors
    DuplicateRecordFields
    OverloadedRecordDot

----------------------------------------------------------------
Library
  import:            language
  Build-Depends:     base      >=4.14 && <5
                   , primitive >=0.6.2
                   , vector    >=0.13.2
                   , containers
                   , process
                   , transformers
                   , inline-c  >=0.9.1
                   , template-haskell
  hs-source-dirs:    src
  include-dirs:      include
  c-sources:         cbits/python.c
  cc-options:        -g -Wall
  -- FIXME: I think should use python-config instead of pkg-config. For now this
  --        will do
  pkgconfig-depends: python3
  extra-libraries:   python3.12
  --
  Exposed-modules:
    Python.Inline.Literal
    Python.Inline.QQ
    Python.Inline
    Python.Types
  Other-modules:
    Python.Internal.Types
    Python.Internal.Init
    Python.Internal.Util
    Python.Internal.Eval
    Python.Internal.EvalQQ
    Paths_inline_python

----------------------------------------------------------------
library test
  import:           language
  build-depends:    base
                  , inline-python
                  , tasty            >=1.2
                  , tasty-hunit      >=0.10
  hs-source-dirs:   test
  Exposed-modules:
    TST.Run

test-suite inline-python-tests
  import:           language
  type:             exitcode-stdio-1.0
  Ghc-options:      -threaded
  hs-source-dirs:   test/exe
  main-is:          main.hs
  build-depends:    base
                  , inline-python
                  , inline-python:test
                  , tasty

test-suite inline-python-tests1
  import:           language
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test/exe
  main-is:          main.hs
  build-depends:    base
                  , inline-python
                  , inline-python:test
                  , tasty


-- Executable pyt
--   import: language
--   ghc-options:   -O2 -Wall -threaded
--   Build-Depends: base
--                , inline-python
--   hs-source-dirs: exe
--   Main-is:        tst.hs
